--- a/package.json
+++ b/package.json
@@ -25,6 +25,7 @@
     ]
   },
   "dependencies": {
+    "@actions/core": "^1.10.0",
     "ejs": "^3.1.8",
     "humanize": "0.0.9",
     "sharp": "^0.24.0"
